kubernetes/apollo/apps/security/onepassword-connect/app/networkpolicy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: onepassword-connect
spec:
  podSelector:
    matchLabels:
      app: onepassword-connect
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: external-secrets
      ports:
        - protocol: TCP
          port: 8080
